css/styles.css
:root {
  --primary-color: rgb(36, 150, 226);

  --card-border-radius: 10px;

  --library-header: 80px;
  --library-footer: 2rem;
  --library-main: calc(100vh - (var(--library-header) + var(--library-footer)));
}

/*  
   ========================================================================= 
   =                         KEVIN POWELL CSS RESET                        =   
   =========================================================================  
   */

/*  Source: https://www.youtube.com/shorts/2lyDv0wOQuQ */

/* makes sizing simpler */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* remove default spacing */
* :not(dialog) {
  margin: 0;
  padding: 0;
}

/* dark mode user-agent-styles */
/* html {
 color-scheme: dark light;
  } */

body {
  min-height: 100vh;
  background: #eee;
}

html {
  font-family: var(--dawntreader-header);
  /* font-size: 1.125rem; */
}

/* responsive images/videos */
img:not(.dashboard-icon),
picture,
/* svg, */
video {
  display: block;
  max-width: 100%;
}

button,
select,
input {
  font-size: inherit;
}

h1,
h2,
h3,
h4 {
  font-family: 'Acme', Arial, Helvetica, sans-serif;
}

p,
a,
button {
  font-family: 'Exo', Arial, Helvetica, sans-serif;
}

/*  
   ========================================================================= 
   =                            LIBRARY PROJECT                            =   
   =========================================================================  
   */

.library-container > * {
  border: 2px solid black;
}

header,
footer {
  display: flex;
  justify-content: center;
  align-items: center;
}

header {
  height: var(--library-header);
}

footer {
  height: var(--library-footer);
}

.library-main {
  & aside {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0.5rem;
    gap: 2rem;
    border: 2px solid black;

    & button {
      padding: 5px 15px;
      width: 100%;
      width: 150px;
    }
  }
}

.library-catalog {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  grid-template-rows: auto;
  justify-items: center;
  align-content: start;
  overflow-y: auto;

  & h2 {
    margin-top: 2rem;
  }
}

.library-catalog > *:not(h2) {
  width: 250px;
  height: 350px;
  border: 2px solid black;
  margin: 2rem 0;
}

.library-catalog-title {
  grid-column: 1/4;
}

@media screen and (max-width: 754px) {
  .library-catalog-title {
    grid-column: 1/3;
  }
}

@media screen and (max-width: 503px) {
  .library-catalog-title {
    grid-column: 1/2;
  }
}

.library-book {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  gap: 4rem;
  position: relative;

  & .book-title {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }

  & > :last-child {
    display: flex;
    gap: 20px;
    margin-bottom: 1rem;
  }
}

.library-book button {
  padding: 5px 15px;
}

.book-form {
  display: grid;
  min-height: 275px;
}

.book-modal input {
  padding: 5px 0;
}

.book-modal-buttons {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.delete {
  position: absolute;
  top: 5px;
  right: 5px;
}

.hidden {
  display: none;
}

@media screen and (min-width: 950px) {
  .library-main {
    display: grid;
    grid-template-columns: 0.1fr 1fr;
    height: var(--library-main);
    overflow-y: auto;

    & aside {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      align-items: center;
      gap: 2rem;
      padding-top: 2rem;
      border: 2px solid black;
    }
  }

  .library-catalog {
    grid-template-columns: repeat(3, 1fr);
    max-height: var(--library-main);
  }

  .library-catalog-title {
    grid-column: span 3;
  }
}

